--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
 	"dependencies": {
-		"express": "^5.1.0"
+		"bcrypt": "^6.0.0",
+		"dotenv": "^17.2.2",
+		"express": "^5.1.0",
+		"jsonwebtoken": "^9.0.2",
+		"pg": "^8.16.3"
 	}
 }
